basic html and js programs

--- a/JSpiderHTML/tagsPrograms/marqueeExa1.html
+++ b/JSpiderHTML/tagsPrograms/marqueeExa1.html
@@ -6,7 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Assigment on if else condition</h1>
-      <script src="multiply.js"></script>
+    <marquee behavior="" direction="">
+        <h1> World's best boss</h1>
+        <img src="image1.png" height="300px" width="350px">
+
+    </marquee>
 </body>
 </html>
