--- a/JspiderWeb/basicProgram/loops.html
+++ b/JspiderWeb/basicProgram/loops.html
@@ -6,7 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Assigment on if else condition</h1>
-      <script src="multiply.js"></script>
+    <script src="forLoop.js"></script>
 </body>
 </html>
