--- a/JSpiderHTML/anchorTag/index.html
+++ b/JSpiderHTML/anchorTag/index.html
@@ -6,7 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Assigment on if else condition</h1>
-      <script src="multiply.js"></script>
+    <pre>
+        <a href="./index.html">Home</a>
+            <img src="https://images.pexels.com/photos/792381/pexels-photo-792381.jpeg?auto=compress&cs=tinysrgb&w=600">
+    </a>
+    </pre>
 </body>
 </html>
