--- a/JspiderWeb/PracticeQuestions/index.html
+++ b/JspiderWeb/PracticeQuestions/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Assigment on if else condition</h1>
-      <script src="multiply.js"></script>
+
+    <script src="PrintDays.js"></script>
 </body>
 </html>
