--- a/JspiderWeb/functions/index.html
+++ b/JspiderWeb/functions/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Assigment on if else condition</h1>
-      <script src="multiply.js"></script>
+    <script src="Scopres.js"></script>
+    <!-- <script src="sum.js"></script> -->
 </body>
 </html>
