--- a/PracticeProgram/index.html
+++ b/PracticeProgram/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Assigment on if else condition</h1>
-      <script src="multiply.js"></script>
+    <h1>check even odd</h1>
+    <script src="checkEvenOdd.js"></script>
 </body>
 </html>
