--- a/JspiderWeb/Arrays/array.html
+++ b/JspiderWeb/Arrays/array.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>images</title>
+    <title>Document</title>
 </head>
 <body>
-    <img src="image.png" alt="ocean" width="700" height="650">
+    <script src="createArray.js"></script>
 </body>
 </html>
